--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Sona sangram singh</h1>
     <p>Here are the things that you need to know </p>
-    <p>This is a new feature </p>
+    <p>This is a new feature (button)</p>
 </body>
 </html>
